Jython NEWS

Jython 2.6a1
  Bugs Fixed
    - [ 1727 ] Error in Jython 2.5.2 with os.stat and varargs
    - [ 1735 ] return type of os.read is unicode, not str
    - [ 1755 ] os.utime('/tmp/nonexistent-file', None) fails to raise OSError
    - [ 1811 ] Recursive import bug w/ SQLAlchemy 0.7.3

Jython 2.5.2
  same as 2.5.2rc4

Jython 2.5.2rc4
  Bugs Fixed
    - [ 1667 ] thread.local subclasses with constructor params fail
    - [ 1698 ] warnings module fails under JSR-223
    - [ 1697 ] Wrong error message when http connection can not be established
    - [ 1210 ] Lib/socket.py doesn't allow IPv6 sockets and fails with an AssertionError
    - [ 1700 ] "virtualenv is not compatible" to 2.5.2rc3
    - [ 1701 ] Files are not flushed properly when opened from the EDT (partial fix)
  New Features
    - The socket module now includes ipv6 support
    - The socket module now also includes Internationalized Domain
      Names (RFC 3490) support on Java 6

Jython 2.5.2rc3
  Bugs Fixed
    - [ 1674 ] PDB crashes under the JSR-223 scripting engine
    - [ 1680 ] jython -c option is not parsed right
    - [ 1681 ] JSR-223, Jython 2.5.2 and implementing Java Interfaces from Python
    - [ 1675 ] Jython exits prematurely when executing a file, thus killing Swing windows
    - [ 1682 ] exit code of 0 on unhandled exception
    - [ 1668 ] strptime('','') works on cpython but not on jython
    - [ 1693 ] Unicode sys.path elements cause UnicodeErrors on import
      
Jython 2.5.2rc2
  Bugs Fixed
    - [ 1665 ] cPickle calls __import__ with illegal parameters
    - [ 1628 ] getpass.getpass echoes input
    - Fix logic to detect that a console is interactive (related to #1133)

Jython 2.5.2rc1
  Bugs Fixed
    - [ 1133 ] Support ipython and other completers with readline emulation
    - [ 1642 ] JSR223 PyScriptEngine#getInterface returns a NPE when called with zero args
    - [ 1662 ] time.strptime does not use Java date format strings properly